--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,6 @@ execute:
   message: false
 
 title: "Trabajo de Simulación III - Estadística y Probabilidad para el Desarrollo de Software"
-lang: es
 
 author:
   - name: "Rinaldi, Flavio"
@@ -32,13 +31,11 @@ affiliations:
 
 format:
   pdf:
-    latex-babel: none 
-    engine: lualatex 
-    latex-babel-lang: polyglossia 
-
+    pdf-engine: pdflatex
     documentclass: article
     papersize: a4
     fontsize: 11pt
+    lang: en
     geometry:
       - top=2.5cm
       - bottom=2.5cm
@@ -59,6 +56,8 @@ format:
     keep-tex: false
     include-in-header:
       text: |
+        \usepackage[utf8]{inputenc}
+        \usepackage[T1]{fontenc}
         \usepackage{fancyhdr}
         \setlength{\headheight}{14pt}
         \addtolength{\topmargin}{-2pt}
@@ -67,27 +66,24 @@ format:
         \fancyhead[R]{IFTS N° 29}
         \usepackage{float}
         \floatplacement{figure}{H}
-        \usepackage{polyglossia}
-        \setmainlanguage[spelling=modern]{spanish}
+        \usepackage{graphicx}
     link-citations: true
     colorlinks: true
     urlcolor: blue
     linkcolor: black
     citecolor: blue
 
-# Configuración de figuras
 fig-cap-location: bottom
 fig-dpi: 300
 fig-format: png
-fig-width: 8
-fig-height: 5
+fig-width: 10
+fig-height: 6
+fig-align: center
 
-# Configuración de tablas
 tbl-cap-location: top
 
-# Configuración de código
 code-annotations: hover
 code-overflow: wrap
+code-fold: false
 
-# Jupyter
 jupyter: python3
